gitops/overlays/base/flux-system/ingress.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver-flux-garu-me
  namespace: flux-system
spec:
  hostnames:
    - flux.garu.me
  parentRefs:
    - name: garu-me
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver-flux-garu-me-http
  namespace: flux-system
spec:
  hostnames:
    - flux.garu.me
  parentRefs:
    - name: garu-me
      namespace: traefik
      sectionName: web
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 308
          type: RequestRedirect
      matches:
        - path:
            type: PathPrefix
            value: /
