gitops/overlays/base/flux-system/network-policies.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cert-manager
  namespace: flux-system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              namespace: traefik
  podSelector: {}
  policyTypes:
    - Ingress
